fix for sub nav wrap on mobile

--- a/docs/_static/conf/scss/main-2024.scss
+++ b/docs/_static/conf/scss/main-2024.scss
@@ -653,6 +653,12 @@ body .uk-offcanvas-slide a.uk-button-ghost {
     }
 }
 
+body .uk-open {
+    .uk-nav-sub li {
+        display: block;
+    }
+}
+
 .sponsors-footer {
     padding: 48px 24px;
     display: flex;
